syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.proto";
option java_outer_classname = "User";

message UserGrpc {
  string user_id = 1;
  string username = 2;
  int64 age = 3;
}

service UserService {
  rpc GetAllUsers(Empty) returns (UserList);
  rpc GetEntryById(UserIdRequest) returns (UserGrpc);
  rpc CreateEntry(Empty) returns (UserGrpc);
  rpc DeleteEntry(UserIdRequest) returns (Empty);
}

message UserIdRequest {
  string user_id = 1;
}

message UserList {
  repeated UserGrpc user = 1;
}

message Empty {}
